# C-Programming2

./: hkb
lab1/: lab1.c  lab1_1.c
lab2/: lab2.c
lab3/: result.md
lab4/: fff.txt
lab5/: lab5.c
lab6/: dynamic_exe  lab6.c  lab6.h  lab6_1.c  static_exe
lab7/: lab7.c  lab7.md
lab7/lab4/: ff.txt  lab4  lab4.c
lab8/: CMakeLists.txt  code.c  without_ctest.c
lab8/src/: func.c  main.c  main.h
lab8/test/: main_test.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
rgr/: CMakeLists.txt  cezar.c  cezar.h  cezar_f.c  input.txt  main_test.c  output.txt  ргр прог.docx
